--- a/README.adoc
+++ b/README.adoc
@@ -3,10 +3,12 @@ NETC
 :author:     Lee Fent
 :copyright:  Lee Fent 2014
 
-NETC Presentations
-------------------
+NETC (National Extension Technology Conference ) Presentations
+--------------------------------------------------------------
 
 A github repo for my http://www.dce.k-state.edu/conf/ace-netc/[ACE/NETC-2013]
 and http://netc2014.org/[NETC-2014] presentations.
+
+Not all that exciting actually.
 
 
